kubernetes/elasticsearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
      annotations:
        k8s.aliyun.com/eci-spot-strategy: "SpotAsPriceGo"
    spec:
      containers:
        - name: elasticsearch
          image: elasticsearch
          ports:
            - containerPort: 9200
          resources:
            requests:
              cpu: "2000m"
              memory: "4Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: svc-elasticsearch
spec:
  type: ClusterIP
  selector:
    app: elasticsearch
  ports:
    - port: 9200
      targetPort: 9200
