kubernetes/ffmpeg-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ffmpeg-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ffmpeg-service
  template:
    metadata:
      labels:
        app: ffmpeg-service
      annotations:
        k8s.aliyun.com/eci-spot-strategy: "SpotAsPriceGo"
    spec:
      containers:
        - name: ffmpeg-service
          image: registry.cn-beijing.aliyuncs.com/b4/video-share_ffmpeg-service
          ports:
            - containerPort: 5020
---
apiVersion: v1
kind: Service
metadata:
  name: svc-ffmpeg-service
spec:
  type: ClusterIP
  selector:
    app: ffmpeg-service
  ports:
    - port: 5020
      targetPort: 5020
