kubernetes/file-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-service
  template:
    metadata:
      labels:
        app: file-service
      annotations:
        k8s.aliyun.com/eci-spot-strategy: "SpotAsPriceGo"
    spec:
      containers:
        - name: file-service
          image: registry.cn-beijing.aliyuncs.com/b4/video-share_file-service
          ports:
            - containerPort: 5016
---
apiVersion: v1
kind: Service
metadata:
  name: svc-file-service
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: file-service
  ports:
    - port: 5016
      targetPort: 5016
