kubernetes/manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
      annotations:
        #k8s.aliyun.com/eci-use-specs: ecs.t6-c2m1.large
        k8s.aliyun.com/eci-spot-strategy: "SpotAsPriceGo"
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
#          resources:
#            requests:
#              cpu: "250m"
#              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: svc-redis
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
---









apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
      annotations:
        k8s.aliyun.com/eci-spot-strategy: "SpotAsPriceGo"
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: svc-mongo
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
---







apiVersion: apps/v1
kind: Deployment
metadata:
  name: nacos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nacos
  template:
    metadata:
      labels:
        app: nacos
      annotations:
        k8s.aliyun.com/eci-spot-strategy: "SpotAsPriceGo"
    spec:
      containers:
        - name: nacos
          image: nacos/nacos-server
          ports:
            - containerPort: 8848
---
apiVersion: v1
kind: Service
metadata:
  name: svc-nacos
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: nacos
  ports:
    - port: 6379
      targetPort: 6379
---






apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
      annotations:
        k8s.aliyun.com/eci-spot-strategy: "SpotAsPriceGo"
    spec:
      containers:
        - name: api-gateway
          image: registry.cn-beijing.aliyuncs.com/b4/video-share_api-gateway
          ports:
            - containerPort: 5018
---
apiVersion: v1
kind: Service
metadata:
  name: svc-api-gateway
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: api-gateway
  ports:
    - port: 5018
      targetPort: 5018
---




apiVersion: apps/v1
kind: Deployment
metadata:
  name: ffmpeg-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ffmpeg-service
  template:
    metadata:
      labels:
        app: ffmpeg-service
      annotations:
        k8s.aliyun.com/eci-spot-strategy: "SpotAsPriceGo"
    spec:
      containers:
        - name: ffmpeg-service
          image: registry.cn-beijing.aliyuncs.com/b4/video-share_ffmpeg-service
          ports:
            - containerPort: 5020
---
apiVersion: v1
kind: Service
metadata:
  name: svc-ffmpeg-service
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: ffmpeg-service
  ports:
    - port: 5020
      targetPort: 5020
---
