kubernetes/nacos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nacos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nacos
  template:
    metadata:
      labels:
        app: nacos
      annotations:
        k8s.aliyun.com/eci-spot-strategy: "SpotAsPriceGo"
    spec:
      containers:
        - name: nacos
          image: nacos/nacos-server
          ports:
            - containerPort: 8848
---
apiVersion: v1
kind: Service
metadata:
  name: svc-nacos
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: nacos
  ports:
    - port: 6379
      targetPort: 6379
