kubernetes/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
      annotations:
        #k8s.aliyun.com/eci-use-specs: ecs.t6-c2m1.large
        k8s.aliyun.com/eci-spot-strategy: "SpotAsPriceGo"
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
#          resources:
#            requests:
#              cpu: "250m"
#              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: svc-redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
