kubernetes/search-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-service
  template:
    metadata:
      labels:
        app: search-service
      annotations:
        k8s.aliyun.com/eci-spot-strategy: "SpotAsPriceGo"
    spec:
      containers:
        - name: search-service
          image: registry.cn-beijing.aliyuncs.com/b4/video-share_search-service
          ports:
            - containerPort: 5019
---
apiVersion: v1
kind: Service
metadata:
  name: svc-search-service
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: search-service
  ports:
    - port: 5016
      targetPort: 5019
