kubernetes/transcode-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transcode-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transcode-service
  template:
    metadata:
      labels:
        app: transcode-service
      annotations:
        k8s.aliyun.com/eci-spot-strategy: "SpotAsPriceGo"
    spec:
      containers:
        - name: search-service
          image: registry.cn-beijing.aliyuncs.com/b4/video-share_transcode-service
          ports:
            - containerPort: 5017
---
apiVersion: v1
kind: Service
metadata:
  name: svc-transcode-service
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: transcode-service
  ports:
    - port: 5017
      targetPort: 5017
