kubernetes/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
      annotations:
        k8s.aliyun.com/eci-spot-strategy: "SpotAsPriceGo"
    spec:
      containers:
        - name: user-service
          image: registry.cn-beijing.aliyuncs.com/b4/universal-user-service
          ports:
            - containerPort: 5014
---
apiVersion: v1
kind: Service
metadata:
  name: svc-user-service
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - port: 5014
      targetPort: 5014
