kubernetes/video-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-service
  template:
    metadata:
      labels:
        app: video-service
      annotations:
        k8s.aliyun.com/eci-spot-strategy: "SpotAsPriceGo"
    spec:
      containers:
        - name: video-service
          image: registry.cn-beijing.aliyuncs.com/b4/video-share_video-service
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-video-service
spec:
  type: ClusterIP
  selector:
    app: video-service
  ports:
    - port: 80
      targetPort: 80
