kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: java8.icu
      http:
        paths:
          - path: /
            backend:
              serviceName: svc-api-gateway
              servicePort: 5018
    - host: java8.icu
      http:
        paths:
          - path: /
            backend:
              serviceName: svc-video-service
              servicePort: 80
